JFR leak profiler should not trace through the StringTable

XMLWordPrintable

    • jfr
    • b27

        The JFR leak profiler finds strong reference chains to object samples. Weirdly enough, it walks the StringTable roots. But these oops are phantomly reachable. So they should arguably be excluded from the root snapshot.

              Assignee:
              Erik Österlund
              Reporter:
              Erik Österlund
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: