8235654: JFR leak profiler should not trace through the StringTable

Reviewed-by: stefank, coleenp, kbarrett, egahlin