src/hotspot/share/jfr/leakprofiler/chains/rootSetClosure.cpp
@@ -79,7 +79,6 @@ void RootSetClosure<Delegate>::process() {
   JvmtiExport::oops_do(this);
   SystemDictionary::oops_do(this);
   Management::oops_do(this);
-  StringTable::oops_do(this);
   AOTLoader::oops_do(this);
 }
 
