src/hotspot/share/jfr/leakprofiler/utilities/rootType.hpp
@@ -41,7 +41,6 @@ class OldObjectRoot : public AllStatic {
     _management,
     _jvmti,
     _code_cache,
-    _string_table,
     _aot,
     JVMCI_ONLY(_jvmci COMMA)
     _number_of_systems
@@ -78,8 +77,6 @@ class OldObjectRoot : public AllStatic {
         return "JVMTI";
       case _code_cache:
         return "Code Cache";
-      case _string_table:
-        return "String Table";
       case _aot:
         return "AOT";
 #if INCLUDE_JVMCI
